# enterprise-synthetic-data-hub

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  api_server.py  pyproject.toml  requirements.txt
.github/workflows/: demo-smoke.yml  publish-snapshot.yml  publish_bootstrap.yml
agentic/critic/: generator_critic.md  repo_critic.md  schema_critic.md
agentic/tasks/: task_full_pipeline.md  task_generator_update.md
agentic/validators/: api_validator.py  cli_validator.py  generator_validator.py  schema_validator.py
ai/: README.md
ai/prompts/: _TEMPLATE.md
ai/roles/: contract_guardian.md  demo_critic.md  spec_architect.md
data/demo_samples/: README.md
data/output/: sample_dataset_v0_1.json  sample_metadata_v0_1.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  CI_CD_OVERVIEW.md  CLI_USAGE.md  DEMO_HARDENING_LOG.md  DEMO_READINESS.md  DOCKER_ENTERPRISE.md  PII_POLICY.md  QA_SIGNOFF.md  ROADMAP_ENTERPRISE.md  TESTING_GUIDE.md  agentic_workflow.md  api.md
docs/demo/: 00-overview.md  01-architecture.md  02-slice-summary.md  03-generator-v0.1.md  04-aev-explainer.md  05-roadmap.md  (+2 more)
governance/: DECISIONS_LOG.md
mop/: index.yaml  master_orchestrator_prompt.md
prompts/: MOP_enterprise_synthetic_data_poc.md
scripts/: bootstrap_and_demo.ps1  bootstrap_and_demo.sh  critic_check.py  demo_start_api.sh  demo_stop_api.sh  publish_bootstrap_assets.ps1  publish_bootstrap_assets.sh  run_demo_flow.py
tests/: test_api.py  test_cli.py  test_dataset_metadata.py  test_generator.py  test_schema_person.py  test_schema_validation.py  test_schema_vehicle.py
(+59 files in other folders)
