[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-synthetic-data-hub"
version = "0.1.0"
description = "POC scaffolding for CSAA/Mobilitas synthetic data generation"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "CSAA Mobilitas Synthetic Data Team", email = "syntheticdata@example.com"}
]
keywords = ["synthetic data", "mobilitas", "csaa", "poc"]
dependencies = [
  "pydantic>=2.7",
  "pytest>=7.4"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
